* updated dependencies * added jsconfig for better editor

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,24 @@
 {
-    "extends": "airbnb-base",
-    "overrides": [
-        {
-            "files": ["test/**/*.js"],
-            "env": {
-                "jest": true
-            },
-            "rules": {
-              "no-unused-expressions": 0
-            }
-        }
-    ],
-    "rules": {
-      "no-param-reassign": 0,
-      "quote-props": 0,
-      "arrow-body-style": 0,
-      "no-unused-expressions": 0
+  "extends": "airbnb-base",
+  "overrides": [
+    {
+      "files": ["test/**/*.js"],
+      "env": {
+        "jest": true
+      },
+      "rules": {
+        "no-unused-expressions": 0,
+        "arrow-parens": 0,
+        "comma-dangle": 0,
+        "implicit-arrow-linebreak": 0
+      }
     }
+  ],
+  "rules": {
+    "no-param-reassign": 0,
+    "quote-props": 0,
+    "arrow-body-style": 0,
+    "no-unused-expressions": 0,
+    "quotes": ["error", "double"]
+  }
 }
