--- a/package.json
+++ b/package.json
@@ -23,22 +23,24 @@
   },
   "homepage": "https://github.com/iskandarovBakshi/postcss-aze-stylesheets",
   "dependencies": {
-    "postcss": "^5.0"
+    "postcss": "^7.0.32"
   },
   "scripts": {
     "clean": "rimraf dist/",
     "test": "npm run clean && npm run lint && npm run publish && jest",
+    "start": "jest",
     "lint": "eslint src",
     "publish": "babel src --out-dir dist"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.6.0",
-    "regenerator-runtime": "^0.12.1",
-    "rimraf": "^2.6.2"
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "jest": "^26.0.1",
+    "regenerator-runtime": "^0.13.5",
+    "rimraf": "^3.0.2"
   }
 }
