--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "scripts": {
     "clean": "rimraf dist/",
     "test": "npm run clean && npm run lint && npm run publish && jest",
+    "start": "jest -w",
     "lint": "eslint src",
     "publish": "babel src --out-dir dist"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.10.1",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.21.2",
     "jest": "^23.6.0",
     "regenerator-runtime": "^0.12.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.7.1"
   }
 }
